# routes/api.php
@@ -33,16 +33,19 @@ Route::group(['middleware' => 'jwt.auth'], function () {
     Route::post('refreshToken',[UserController::class, 'refreshToken']);
     Route::post('getUserRole',[UserController::class, 'getUserRole']);
     Route::get('getUsers',[UserController::class, 'getUsers']);
+    Route::get('countOfUsers',[UserController::class, 'countOfUsers']);
     // ROLES
     Route::post('addRole',[RoleController::class, 'addRole']);
     // RULES
     Route::get('getRules',[RuleController::class, 'index']);
+    Route::get('countOfRules',[RuleController::class, 'countOfRules']);
     Route::post('addRules',[RuleController::class, 'store']);
     Route::get('showRule/{id}',[RuleController::class, 'show']);
     Route::delete('deleteRule/{id}',[RuleController::class, 'destroy']);
     Route::post('restoreRule/{id}',[RuleController::class, 'restore']);
     // SCHEDULES
     Route::get('getSchedules',[ScheduleController::class, 'index']);
+    Route::get('countOfSchedules',[ScheduleController::class, 'countOfSchedules']);
     Route::get('showSchedule/{id}',[ScheduleController::class, 'show']);
     Route::post('addSchedule',[ScheduleController::class, 'store']);
     Route::put('updateSchedule/{id}',[ScheduleController::class, 'update']);
@@ -57,6 +60,7 @@ Route::group(['middleware' => 'jwt.auth'], function () {
     Route::post('getHistoryByUserAndRule',[AccessControlController::class, 'getHistoryByUserAndRule']);
     Route::post('registerStartTime',[AccessControlController::class, 'registerStartTime']);    
     Route::post('registerFinishTime',[AccessControlController::class, 'registerFinishTime']);
+    Route::post('addObservation',[AccessControlController::class, 'addObservation']);
     Route::get('clearHistory',[AccessControlController::class, 'clearHistory']);
     Route::get('export',[AccessControlController::class,'export']);
 });
